--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ version = "0.1"
 optional = true
 
 [dependencies.libflac-sys]
-version = "0.1"
+git = "https://github.com/awsomearvinder/libflac-sys.git"
 features = []
 optional = true
 
