Switch default to libflac-sys

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,6 @@ features = []
 optional = true
 
 [features]
-default  = ["flac"]
+default  = ["libflac"]
 flac     = ["flac-sys"]
 libflac  = ["libflac-sys"]
